# anki-ios

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
AnkiIOS/: project.yml
AnkiIOS/Sources/App/: AnkiIOSApp.swift  DeckListView.swift  ImportView.swift  SyncView.swift
AnkiIOS/Sources/Backend/: BackendClient.swift
AnkiIOS/Sources/Review/: MediaSchemeHandler.swift  ReviewSession.swift  ReviewerView.swift
AnkiIOS/Sources/Web/: AnkiWebView.swift
AnkiIOS/Tests/: BackendTests.swift
bridge/: Cargo.toml
bridge/include/: anki_bridge.h
bridge/src/: lib.rs
scripts/: build-rust.sh  build-web-assets.sh  gen-swift-proto.sh
tools/gen-service-index/: Cargo.toml  build.rs
tools/gen-service-index/src/: main.rs
